# python-interview-helper-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  questions.example.yaml
scripts/: seed_questions.py
src/: __init__.py  api.py  code_executor.py  config.py  container.py  database.py  interview_orchestrator.py  interview_service.py  models.py  orchestrator.py  prompt_context.py  rate_limit.py  schemas.py  services.py  telegram_bot.py
src/agents/: algorithms.py  backend.py  base.py  coach.py  databases.py  explainer.py  motivator.py  networking.py  reviewer.py  security.py  system_design.py  teacher.py
src/application/: services.py  user_services.py
src/domain/: entities.py  ports.py  rubrics.py
src/infrastructure/: ai.py  docs.py  executor.py  orchestrator.py  repositories.py  voice.py
src/infrastructure/mcp/: context7_client.py
src/routers/: python_tutor.py
tests/: test_admin_search_e2e.py  test_api_answers.py  test_application_services.py  test_e2e_api.py  test_questions_search.py  test_rate_limiter.py  test_rate_limiter_429.py
