[project]
name = "interview-helper-bot"
version = "0.1.0"
description = "Telegram bot for technical interview preparation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-telegram-bot>=20.7",
    "openai>=1.3.7",
    "httpx>=0.27.0",
    "gigachat>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydub>=0.25.1",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pytest-cov>=4.1.0",
] 

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.ruff]
line-length = 100
select = ["E","F","I"] 